--- a/css/new-nav.css
+++ b/css/new-nav.css
@@ -329,6 +329,7 @@ header .mega_menu_wrapper > .dropdown_wrapper > ul {
 header .mega_menu_wrapper.mega_menu_active .dropdown_wrapper > ul {
   opacity: 1;
   width: 100%;
+  margin-top: 0px;
 }
 header .mega_menu_wrapper ul[class*=" lvl"] {
   padding: 27px 0px 27px 16px;
